--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!---html class creation-->
 <html class="no-js" lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -92,5 +93,5 @@ a:hover{
             </header>
         </div>
     </body>
-    <!--Developed by Vinit Shahdeo-->
+    <!--Developed by Utkarsh Srivastava-->
 </html>
